--- a/.editorconfig
+++ b/.editorconfig
@@ -1,2 +1,9 @@
+root = true
+
+# Unix-style newlines with a newline ending every file
+[*]
+end_of_line = lf
+insert_final_newline = true
+
 [*.go]
 indent_size = 8
